--- a/frontend/components/Trustedsection/Trustedsection.scss
+++ b/frontend/components/Trustedsection/Trustedsection.scss
@@ -16,7 +16,8 @@
     }
 
     .trust-list {
-        width: 800px;
+        width: 100%;
+        max-width: 800px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
