--- a/frontend/components/Navbar/Navbar.scss
+++ b/frontend/components/Navbar/Navbar.scss
@@ -276,12 +276,13 @@
             top: 0;
             left: 0;
             width: 100vw;
-            height: 100vh;
+            height: calc(100vh - 73px);
             background: var(--color-white);
             margin-top: 73px;
-            padding: 16px;
+            padding: 16px 16px 40px 16px;
             z-index: 1001;
             overflow-y: auto;
+            padding-bottom: 80px;
 
             &.active {
                 display: flex;
