--- a/frontend/components/Trustedsection/Trustedsection.scss
+++ b/frontend/components/Trustedsection/Trustedsection.scss
@@ -1,8 +1,9 @@
 .trusted-section {
+    width: 100%;
+    max-width: 1000px;
     padding: 64px 24px;
 
     .trusted-container {
-        max-width: 1200px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -17,7 +18,6 @@
 
     .trust-list {
         width: 100%;
-        max-width: 800px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
